# FastAPI-MLOPS

./: .gitignore  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yml  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  train.yml
api/core/: config.py  job_store.py
api/handlers/: metrics_handler.py  predict_handler.py  router.py  train_handler.py
api/middleware/: security.py
api/schemas/: base_schema.py  predict_schema.py  train_schema.py
data/raw/: test.csv.dvc  train.csv.dvc
notebooks/: submission.csv
pipeline/: evaluation_pipeline.py  predict_pipeline.py  preprocess_pipeline.py  train_pipeline.py
web/: Dockerfile  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.js  page.js
web/app/components/: charts.js  ui.js
